# schist

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Advanced.md  MANIFEST.in  README.md  README.rst  conftest.py  conftest.sh  patch.mcmc.txt  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py  test.md
docs/: .readthedocs.yaml  Makefile  conf.py  environment.yml  index.rst  intro.rst  make.bat  modules.rst  plotting.rst  quick.rst  readme.rst  schist.inference.rst  schist.io.rst  schist.plotting.rst  schist.rst  schist.tools.rst  scnsbm.inference.rst  scnsbm.io.rst  scnsbm.plotting.rst  scnsbm.tools.rst
docs/source/: api.rst  clustering_pbmc.rst  conf.py  functions.rst  index.rst  label_transfer.rst  multimodal_data.rst  multimodal_spatial.rst  readme.rst  release_notes.rst  requirements.txt  tutorials.rst
notebooks/: Cell_Marginals.ipynb  NSBM_demo.ipynb
nsbm/: __init__.py  nsbm.py
schist/: __init__.py  _utils.py  _version.py
schist/_utils/: __init__.py  _gt_utils.py  _tl_utils.py
schist/inference/: __init__.py  _flat_model.py  _helpers.py  _model.py  _model_multi.py  _multi_nested.py  _nested_model.py  _planted_model.py  _pmleiden.py  _utils.py
schist/input_output/: __init__.py  _io_utils.py
schist/io/: __init__.py  _utils.py
schist/plotting/: __init__.py  _alluvial.py  _draw_tree.py  _utils.py
schist/tools/: __init__.py  _affinity_tools.py  _draw_graph.py  _helpers.py  _label_transfer.py  _lineages.py  _select.py  _tl_utils.py  _utils.py
scnsbm/: __init__.py  _utils.py  inference.py  utils.py
scnsbm/io/: __init__.py  (+3 more)
(+53 files in other folders)
